[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["levelup"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.ini", "*.yaml"]

[project]
name = "LevelUP"
version = "0.1.0"
description = "LevelUP is an advanced AI-powered CV analysis application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "google-generativeai>=0.8.5",
    "metatron>=0.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "sentry-sdk>=2.43.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.0",
    "starlette>=0.49.1",
    "streamlit>=1.51.0",
    "pytest-mock==3.15.1",
    "pdfplumber==0.11.8"
]

[dependency-groups]
dev = [
    # docs
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material[pymdown]>=9.6.22",
    "pygments>=2.18.0,<2.20.0",
    # security
    "bandit>=1.8.6",
    "safety>=3.6.2",
    # clean code
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    # tests
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    # ipython
    "ipython>=9.6.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`), isort (`I`), and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["levelup"]
known-third-party = ["wandb"]

[tool.mypy]
# Global options
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Exclude alembic and migrations
exclude = [
    "levelup/database/alembic/",
    "build/",
    "dist/",
    ".venv/",
]

# Per-module options - ignore modules without type stubs
[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlalchemy_utils.*",
    "google.generativeai.*",
    "streamlit.*",
    "metatron.*",
    "chromedriver_autoinstaller.*",
    "selenium.*",
    "trafilatura.*",
    "beautifulsoup4.*",
    "lxml.*",
    "tiktoken.*",
    "tenacity.*",
    "diskcache.*",
    "cliff.*",
    "langchain_text_splitters.*",
    "analyzer.*",
]
ignore_missing_imports = true

# Allow some dynamic behavior for BeautifulSoup
[[tool.mypy.overrides]]
module = "bs4.*"
ignore_errors = true
